[package]
name = "rattler-server"
version = "0.3.0"
edition = "2021"

[features]
default = ['native-tls']
native-tls = [
    'reqwest/native-tls',
    'rattler_networking/native-tls',
    'rattler_repodata_gateway/native-tls',
]
rustls-tls = [
    'reqwest/rustls-tls',
    'rattler_networking/rustls-tls',
    'rattler_repodata_gateway/rustls-tls',
]

[dependencies]
anyhow = "1.0.79"
async-compression = { version = "0.4.5", features = ["tokio", "bzip2", "zstd"] }
axum = { version = "0.7.3", features = ["json"] }
clap = { version = "4.4.16", features = ["derive", "env", "string"] }
dashmap = "5.5.3"
dirs = "5.0.1"
futures = "0.3.30"
rattler_conda_types = "0.16.2"
rattler_repodata_gateway = { version = "0.16.2", default-features = false }
rattler_networking = { version = "0.16.2", default-features = false }
rattler_solve = { version = "0.16.2", default-features = false, features = [
    "resolvo",
    "libsolv_c",
] }
reqwest = { version = "0.11.23", default-features = false }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.3.0"
mktemp = "0.5.1"

[dev-dependencies]
hyper = "1.1.0"
mime = "0.3.17"
mock_instant = "0.3.1"
mockito = "1.2.0"
rstest = "0.18.2"
serde_json = "1.0.111"
tower = "0.4.13"

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH",
]
